# DCH-framework

./: .gitignore  .gitmodules  README.md  do_FTT.sh  do_SV4tau.sh  run_FTT.sh  run_SV4tau.sh  testClassicSVfit.root  testClassicSVfit_withMassContraint.root
DCH/: .DCHv2.py.swp  .gitignore  .gitmodules  DCH.py  DCH_fakeRate.py  DCH_noPairing.py  DCH_test.py  DCHv0.py  DCHv0.py.bak  DCHv1.py  DCHv1.py.bak  DCHv2.py  DCHv3.py  DCHv3.py.bak  DY.weights  DY_hadd  DY_mm.ntup  DY_mm_hadd  DY_tt.ntup  DY_tt_hadd  H2p2mHRTo2L_M_500_none.txt  H2p2mHRTo4L_M_1000_none.csv  H2p2mHRTo4L_M_1000_none.txt  MET_incl.C  MyBranc.C  TTTo2L2Nu.ntup  TTTo2L2Nu.weights  TTTo2L2Nu_mm.ntup  TTTo2l_hadd  TTTo2l_mm_hadd  TTTo2l_tt_hadd  TTW.csv  TTW_none.txt  TTW_out.ntup  WZ.ntup  WZ.weights  WZ_hadd  WZ_ttt.ntup  WZ_ttt_hadd  \  (+14 more)
DCH/Csv/: Hpp-M1000_ele0_none.csv  Hpp-M1000_ele1_none01.csv  Hpp-M1000_ele2_none.csv  Hpp-M1000_ele2_none02.csv  Hpp-M1000_mu0_none.csv  Hpp-M1000_mu2_none.csv  Hpp-M1000_t_del11_none_del11.csv  Hpp-M1000_t_del12_none_del12.csv  Hpp-M1000_t_del13_none_del13.csv  Hpp-M1000_t_del14_none_del14.csv  Hpp-M1000_t_del15_none_del15.csv  Hpp-M1000_t_del2_none_del2.csv  Hpp-M1000_t_del3_none_del3.csv  Hpp-M1000_t_del4_none_del4.csv  Hpp-M1000_t_del7_none_del7.csv  Hpp-M1000_t_del8_none_del8.csv  Hpp-M1000_t_del9_none_del9.csv  Hpp-M1400_ele0_none.csv  Hpp-M1400_ele1_none.csv  Hpp-M1400_ele1_none01.csv  Hpp-M1400_ele2_none.csv  Hpp-M1400_ele2_none02.csv  Hpp-M1400_mu2_none.csv  Hpp-M1400_t_del11_none_del11.csv  Hpp-M1400_t_del12_none_del12.csv  Hpp-M1400_t_del13_none_del13.csv  Hpp-M1400_t_del15_none_del15.csv  Hpp-M1400_t_del2_none_del2.csv  Hpp-M1400_t_del5_none_del5.csv  Hpp-M1400_t_del6_none_del6.csv  Hpp-M1400_t_del8_none_del8.csv  Hpp-M500_del_none.csv  Hpp-M500_ele1_none.csv  Hpp-M500_ele2_none02.csv  Hpp-M500_mu0_none.csv  Hpp-M500_mu1_none.csv  Hpp-M500_mu2_none.csv  Hpp-M500_none.csv  Hpp-M500_t_del0_none_del0.csv  Hpp-M500_t_del10_none_del10.csv  (+74 more)
DCH/DCH/: DCHv0.py  DCHv1.py  DCHv2.py  MC_2017.root  cuts_OG.yaml  skim_HDC.ntup
DCH/funcs/: .tauFunDCH.py.swp  METCorrections.py  Weights.py  cuts.yaml  generalFunctions.py  tauFun_py
DCH/funcs/old/: generalFunctions_v1.py  outTuple_v1.py  tauFun_v1.py  tauFun_v3.py
MC/: Data_2018UL.csv  MCsamples_2018UL.csv  fileList.txt  makeCondor.py  makeData.py  makeMC.py  runData_2018_DCH.csh  runMC_2018_DCH.csh
MC/.svn/: wc.db
MC_og/: README.md  makeCondor.py  makeMC.py  runMC_2018_DCH.csh
MC_og/DCH/HppMM500_2018/: all_HppMM500_001.jdl  all_HppMM500_001.sh
MET_stuff/: Kinematics.C  Kinematics.h  MET_incl.C  MyBranc.C  MyBranc.h  cat.h
TauAnalysis/ClassicSVfit/: BuildFile.xml  Makefile  README.md
TauAnalysis/ClassicSVfit/dep/: ClassicSVfit.d  ClassicSVfitBase.d  ClassicSVfitIntegrand.d  ClassicSVfitIntegrandBase.d  FastMTT.d  FittedTauLepton.d  MeasuredTauLepton.d  SVfitIntegratorMarkovChain.d  svFitAuxFunctions.d  svFitHistogramAdapter.d  testClassicSVfit.d  testClassicSVfitLFV.d  testFastMTT.d
TauAnalysis/ClassicSVfit/exec/: testClassicSVfit  testClassicSVfitLFV  testFastMTT
TauAnalysis/ClassicSVfit/interface/: ClassicSVfit.h  ClassicSVfitBase.h  ClassicSVfitIntegrand.h  ClassicSVfitIntegrandBase.h  FastMTT.h  FittedTauLepton.h  MeasuredTauLepton.h  SVfitIntegratorMarkovChain.h  svFitAuxFunctions.h  svFitHistogramAdapter.h
TauAnalysis/ClassicSVfit/src/: ClassicSVfit.cc  ClassicSVfitBase.cc  ClassicSVfitIntegrand.cc  ClassicSVfitIntegrandBase.cc  FastMTT.cc  FittedTauLepton.cc  MeasuredTauLepton.cc  SVfitIntegratorMarkovChain.cc  svFitAuxFunctions.cc  svFitHistogramAdapter.cc
TauAnalysis/ClassicSVfit4tau/: BuildFile.xml  Makefile  README.md  vamp.xml
TauAnalysis/ClassicSVfit4tau/dep/: ClassicSVfit4tau.d  ClassicSVfitIntegrand4tau.d  svFitHistogramAdapter4tau.d  testClassicSVfit4tau.d  testDCH4tau.d  vamp_interface.d
TauAnalysis/ClassicSVfit4tau/exec/: testClassicSVfit4tau  testDCH4tau
TauAnalysis/ClassicSVfit4tau/interface/: ClassicSVfit4tau.h  ClassicSVfitIntegrand4tau.h  svFitHistogramAdapter4tau.h
VAMP/vamp-2.3.0/: AUTHORS  Makefile  Makefile.am  Makefile.in  TODO  aclocal.m4  config.status  configure  configure.ac  libtool
VAMP/vamp-2.3.0/m4/: aux.m4  fortran.m4  latex.m4  noweb.m4
VAMP/vamp-2.3.0/share/: Makefile  Makefile.am  Makefile.in
VAMP/vamp-2.3.0/share/doc/: Makefile  Makefile.am  Makefile.in  tex-comments.sh  vamp.d  vegas.d
VAMP/vamp-2.3.0/src/: Makefile  Makefile.am  Makefile.depend  Makefile.in  application.nw  constants.nw  coordinates.nw  divisions.f90  divisions.lo  divisions.nw  exceptions.f90  exceptions.nw  histograms.f90  histograms.lo  histograms.nw  iso_fortran_env_stub.f90  kinds.f90  kinds.lo  kinematics.nw  libvamp.la  linalg.f90  linalg.lo  linalg.mod  linalg.nw  mpi90.f90  mpi90.nw  postlude.nw  prelude.nw  products.f90  products.lo  products.nw  sample.nw  specfun.f90  specfun.lo  specfun.mod  specfun.nw  tao52_random_numbers.f90  tao52_random_numbers.lo  tao52_random_numbers.mod  tao_random_numbers.f90  (+20 more)
VAMP/vamp-2.3.0/src/.libs/: libvamp.la  libvamp.lai  libvamp.so.0.0.0
VAMP/vamp-2.3.0/tests/: Makefile  Makefile.am  Makefile.depend  Makefile.in  constants.f90  kinematics.f90  vamp_test.f90  vamp_test0.f90
funcs/: .generalFunctions.py.swp  .tauFunDCH.py.swp  METCorrections.py  ScaleFactor.py  ScaleFactor.py.bak  Weights.py  cuts_AZH.yaml  generalFunctions.py  generalFunctions_og.py  generalFunctions_test.py  outTuple.py  outTuple2Lep.py  outTuple2Lep_back.py  outTuple_og.py  outTuple_test.py  outTuple_test.py_og  outTuple_test0.py  tauFunDCH.py  tauFunDCH.py_original  tauFunDCH_og.py  tauFunDCH_test.py
funcs/old/: generalFunctions_v3.py
tools/: Electron_RunUL2016preVFP_Ele25_EtaLt2p1.root  SystWeights.py  Yields.py  Yields_new.py  branchselection.py  crab_template.py  extract_channel.py  getErrors.py  hadnano2.py  make_jme.py  make_jmeElectrons.py  make_jmeGjets.py  make_jmeMuons.py  make_jmev2.py  make_local.py  muonExample.py  norm.py  pset.py  removeDuplicateEvents.py  runjme.sh  splitCategories.C  splitCategories.py
tools/.svn/: wc.db
(+31 files in other folders)
